# GenAI

./: .gitignore  Pipfile  pyproject.toml
Day1/: LLM.py  LLM2.py
Day2/: chatbot.py  whatapp_chatbot.py
Day3/: ai_agent.py
Day4/: mini_cursor.py
Day4/tic-tac-toe/: index.html  script.js  style.css
Day5/: rag_phase1.py  rag_phase2.py
Day6/: pgvector.ipynb
